--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <header>
-        <h1>Avnish Maurya Full website </h1>
+        <h1> Maurya website </h1>
         <nav>
             <a href="#" onclick="showpage('All')"><i class="fa-solid fa-layer-group"></i>All</a>
             <a href="#" onclick="showPage('home')"><i class="fa-solid fa-house"></i>Home</a>
@@ -171,6 +171,7 @@
             <li>Web Design</li>
             <li>Frontend Development</li>
             <li>JavaScript Projects</li>
+            And CSS
         </ul>
     </section>
     <!----Setting---->
@@ -199,7 +200,7 @@
 
     <!-- Message Icon with Link -->
     <a href="index1.html" class="message-icon" title="Message">
-        💬AA
+        💬
     </a>
 
 
@@ -287,3 +288,4 @@
 </body>
 
 </html>
+
